--- a/_data/locales/en.yml
+++ b/_data/locales/en.yml
@@ -14,7 +14,7 @@ tabs:
   categories: Blogs
   tags: Tags
   archives: Timeline
-  about: About Me & <br> Privacy policy
+  about: About Me 
   
   
 
