--- a/_data/locales/en.yml
+++ b/_data/locales/en.yml
@@ -14,7 +14,9 @@ tabs:
   categories: Blogs
   tags: Tags
   archives: Timeline
-  about: About Me 
+  about: About Me
+  contact: Contact
+  privacy: Privacy Policy
   
   
 
